--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <body>
     <div id="app"></div>
+    <script src="https://platform.twitter.com/widgets.js"></script>
     <script src="public/bundle.js"></script>
   </body>
 </html>
